fix layout issues

--- a/new-branding/src/components/contact-sales/Contact/Form/index.scss
+++ b/new-branding/src/components/contact-sales/Contact/Form/index.scss
@@ -10,19 +10,42 @@
   &__form {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
 
     &__wrapper {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 10px;
+      row-gap: 10px;
+      column-gap: 20px;
     }
+  }
+
+  &__button {
+    width: 50%;
+    margin: 0 auto;
+  }
+
+  &__textarea {
+    width: 70%;
+    margin: 0 auto;
   }
 }
 
 @media (max-width: 1250px) {
   .contact-form {
     padding: 35px 40px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .contact-form {
+    &__button {
+      width: 100%;
+    }
+
+    &__textarea {
+      width: 100%;
+    }
   }
 }
 
